// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abstract.ts [babel-ts] format 1`] = `
"Method 'foo' cannot have an implementation because it is marked abstract. (2:5)
  1 | class A {
> 2 |     abstract foo() {}
    |     ^
  3 | }"
`;

exports[`classAbstractMethodWithImplementation.ts [babel-ts] format 1`] = `
"Method 'foo' cannot have an implementation because it is marked abstract. (2:5)
  1 | abstract class A {
> 2 |     abstract foo() {}
    |     ^
  3 | }"
`;

exports[`declare-accessor.ts [babel-ts] format 1`] = `
"'declare' is not allowed in getters. (2:3)
  1 | class Foo {
> 2 |   declare get foo()
    |   ^
  3 |   declare set foo(v)
  4 | }
  5 |"
`;

exports[`snippet: #0 [babel-ts] format 1`] = `
"Invalid left-hand side in assignment expression. (1:1)
> 1 | foo as any = 10;
    | ^"
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"Invalid left-hand side in assignment expression. (1:7)
> 1 | ({ a: b as any = 2000 } = x);
    |       ^"
`;

exports[`snippet: #2 [babel-ts] format 1`] = `
"Unterminated JSX contents. (1:9)
> 1 | <string>foo = '100';
    |         ^"
`;

exports[`snippet: #3 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   abstract e();
    |   ^
  3 | }"
`;

exports[`snippet: #4 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   declare e();
    |   ^
  3 | }"
`;

exports[`snippet: #5 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:10)
  1 | interface Foo {
> 2 |   export e();
    |          ^
  3 | }"
`;

exports[`snippet: #6 [babel-ts] format 1`] = `
"'static' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   static e();
    |   ^
  3 | }"
`;

exports[`snippet: #7 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   private e();
    |   ^
  3 | }"
`;

exports[`snippet: #8 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   protected e();
    |   ^
  3 | }"
`;

exports[`snippet: #9 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   public e();
    |   ^
  3 | }"
`;

exports[`snippet: #10 [babel-ts] format 1`] = `
"'readonly' modifier can only appear on a property declaration or index signature. (2:3)
  1 | interface Foo {
> 2 |   readonly e();
    |   ^
  3 | }"
`;
